Adicionado endpoint book