@@ -33,29 +33,29 @@ class MapperTests {
     @Test
     void parseEntityListToVOListTest() {
         List<PersonDTO> outputList = Mapper.parseListObjects(inputObject.mockEntityList(), PersonDTO.class);
-        PersonDTO outputZero = outputList.get(0);
+        PersonDTO outputZero = outputList.getFirst();
 
-        assertEquals(Long.valueOf(0L), outputZero.getKey());
-        assertEquals("First Name Test0", outputZero.getFirstName());
-        assertEquals("Last Name Test0", outputZero.getLastName());
-        assertEquals("Addres Test0", outputZero.getAddress());
-        assertEquals("Male", outputZero.getGender());
+        assertEquals(Long.valueOf(1L), outputZero.getKey());
+        assertEquals("First Name Test1", outputZero.getFirstName());
+        assertEquals("Last Name Test1", outputZero.getLastName());
+        assertEquals("Addres Test1", outputZero.getAddress());
+        assertEquals("Female", outputZero.getGender());
 
         PersonDTO outputSeven = outputList.get(7);
 
-        assertEquals(Long.valueOf(7L), outputSeven.getKey());
-        assertEquals("First Name Test7", outputSeven.getFirstName());
-        assertEquals("Last Name Test7", outputSeven.getLastName());
-        assertEquals("Addres Test7", outputSeven.getAddress());
-        assertEquals("Female", outputSeven.getGender());
+        assertEquals(Long.valueOf(8L), outputSeven.getKey());
+        assertEquals("First Name Test8", outputSeven.getFirstName());
+        assertEquals("Last Name Test8", outputSeven.getLastName());
+        assertEquals("Addres Test8", outputSeven.getAddress());
+        assertEquals("Male", outputSeven.getGender());
 
         PersonDTO outputTwelve = outputList.get(12);
 
-        assertEquals(Long.valueOf(12L), outputTwelve.getKey());
-        assertEquals("First Name Test12", outputTwelve.getFirstName());
-        assertEquals("Last Name Test12", outputTwelve.getLastName());
-        assertEquals("Addres Test12", outputTwelve.getAddress());
-        assertEquals("Male", outputTwelve.getGender());
+        assertEquals(Long.valueOf(13L), outputTwelve.getKey());
+        assertEquals("First Name Test13", outputTwelve.getFirstName());
+        assertEquals("Last Name Test13", outputTwelve.getLastName());
+        assertEquals("Addres Test13", outputTwelve.getAddress());
+        assertEquals("Female", outputTwelve.getGender());
     }
 
     @Test
@@ -71,28 +71,28 @@ class MapperTests {
     @Test
     void parserVOListToEntityListTest() {
         List<Person> outputList = Mapper.parseListObjects(inputObject.mockDTOList(), Person.class);
-        Person outputZero = outputList.get(0);
+        Person outputZero = outputList.getFirst();
 
-        assertEquals(Long.valueOf(0L), outputZero.getId());
-        assertEquals("First Name Test0", outputZero.getFirstName());
-        assertEquals("Last Name Test0", outputZero.getLastName());
-        assertEquals("Addres Test0", outputZero.getAddress());
-        assertEquals("Male", outputZero.getGender());
+        assertEquals(Long.valueOf(1L), outputZero.getId());
+        assertEquals("First Name Test1", outputZero.getFirstName());
+        assertEquals("Last Name Test1", outputZero.getLastName());
+        assertEquals("Addres Test1", outputZero.getAddress());
+        assertEquals("Female", outputZero.getGender());
 
         Person outputSeven = outputList.get(7);
 
-        assertEquals(Long.valueOf(7L), outputSeven.getId());
-        assertEquals("First Name Test7", outputSeven.getFirstName());
-        assertEquals("Last Name Test7", outputSeven.getLastName());
-        assertEquals("Addres Test7", outputSeven.getAddress());
-        assertEquals("Female", outputSeven.getGender());
+        assertEquals(Long.valueOf(8L), outputSeven.getId());
+        assertEquals("First Name Test8", outputSeven.getFirstName());
+        assertEquals("Last Name Test8", outputSeven.getLastName());
+        assertEquals("Addres Test8", outputSeven.getAddress());
+        assertEquals("Male", outputSeven.getGender());
 
         Person outputTwelve = outputList.get(12);
 
-        assertEquals(Long.valueOf(12L), outputTwelve.getId());
-        assertEquals("First Name Test12", outputTwelve.getFirstName());
-        assertEquals("Last Name Test12", outputTwelve.getLastName());
-        assertEquals("Addres Test12", outputTwelve.getAddress());
-        assertEquals("Male", outputTwelve.getGender());
+        assertEquals(Long.valueOf(13L), outputTwelve.getId());
+        assertEquals("First Name Test13", outputTwelve.getFirstName());
+        assertEquals("Last Name Test13", outputTwelve.getLastName());
+        assertEquals("Addres Test13", outputTwelve.getAddress());
+        assertEquals("Female", outputTwelve.getGender());
     }
 }
